force-app/main/default/objects/SOLXYZCSO001__ReportModelDefinition__c/SOLXYZCSO001__ReportModelDefinition__c.object-meta.xml
<CustomObject>
    <description>Manage SFDC object and overlay-type mapping</description>
    <label>型定義</label>
    <nameField>
        <label>型定義ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>