force-app/main/default/objects/SOLXYZCSO001__ReportModelDefinition__c/fields/SOLXYZCSO001__InputDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__InputDate__c</fullName>
    <label>入力項目日付型</label>
    <type>Date</type>
</CustomField>