force-app/main/default/objects/SOLXYZCSO001__ReportModelDefinition__c/fields/SOLXYZCSO001__OverlayModel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayModel__c</fullName>
    <label>オーバレイ型</label>
    <length>17</length>
    <type>Text</type>
</CustomField>