force-app/main/default/objects/SOLXYZCSO001__ReportModelDefinition__c/fields/SOLXYZCSO001__ReportDefinitionID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportDefinitionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>帳票定義</label>
    <referenceTo>SOLXYZCSO001__ReportDefinition__c</referenceTo>
    <relationshipLabel>型定義</relationshipLabel>
    <relationshipName>zMI4</relationshipName>
    <type>Lookup</type>
</CustomField>