force-app/main/default/objects/SOLXYZCSO001__ReportModelDefinition__c/fields/SOLXYZCSO001__SalesforceModel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SalesforceModel__c</fullName>
    <label>Salesforce型</label>
    <length>18</length>
    <type>Text</type>
</CustomField>